# substrate-node

./: Cargo.lock~df3f489 (pallet cv)  Cargo.toml  README.md
chains/testnet/: scvRaw.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  lib.rs  testnet_fixtures.rs
pallets/account/: Cargo.toml
pallets/account/src/: impls.rs  lib.rs  mock.rs  tests.rs
pallets/certificate/: Cargo.toml
pallets/certificate/src/: lib.rs
pallets/cv/: Cargo.toml
pallets/cv/src/: lib.rs
pallets/moderation/: Cargo.toml  README.md
pallets/moderation/src/: lib.rs
pallets/sys-man/: Cargo.toml
pallets/sys-man/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/utils/: Cargo.toml
pallets/utils/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
