[package]
name = "scv-primitives"
version = "1.0.0"
authors = ["SCV Developers"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-12", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-12", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-12", default-features = false }


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
    "scale-info/std",
	"sp-runtime/std",
    "sp-core/std",
	"frame-support/std",
]